fixed the alignment on the maps page

--- a/Tech day/events.css
+++ b/Tech day/events.css
@@ -84,7 +84,7 @@
 
 
 #main{
-    transition:margin-left 0.5s;
+    transition:margin-left 0.7s;
     padding:20px;
     overflow: hidden;
     width: 100%;
